feature: golden forest semi-raw
Took 1 hour 36 minutes